--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas>=2.2.2,<3.0
 scikit-learn>=1.5.0
 umap-learn>=0.5.7
 opentsne>=1.0.1
-annoy>=1.0
+annoy>=1.0,<1.17.3
 torch>=2.6.0
 transformers>=4.49.0
 sentence_transformers>=3.4.1
