--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ umap-learn>=0.5.7
 opentsne>=1.0.1
 annoy>=1.0,<1.17.3
 torch>=2.6.0
-transformers>=4.49.0
-sentence_transformers>=3.4.1
+transformers>=4.49.0,<4.50
+sentence_transformers>=3.4.1,<4
 pymagnitude-lite>=0.1.143
